[gd_scene load_steps=7 format=3 uid="uid://dxk142g0m4br0"]

[ext_resource type="Script" uid="uid://bdmuhwxxwm1a8" path="res://src/ui/upgrade_levels.gd" id="1_iaf4o"]
[ext_resource type="Texture2D" uid="uid://dl82fhnd0jit2" path="res://assets/images/gui/upgrade_level_indicator_full.png" id="2_bl1tw"]
[ext_resource type="Texture2D" uid="uid://cu43macy57mtc" path="res://assets/images/gui/upgrade_level_indicator_empty.png" id="2_ia114"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ia114"]
texture = ExtResource("2_bl1tw")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2chkt"]
texture = ExtResource("2_ia114")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bl1tw"]
texture = ExtResource("2_ia114")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[node name="UpgradeLevels" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 15)
offset_right = 100.0
offset_bottom = 20.0
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_iaf4o")
filled_style_box = SubResource("StyleBoxTexture_ia114")
empty_style_box = SubResource("StyleBoxTexture_2chkt")

[node name="UpgradeL1" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bl1tw")

[node name="UpgradeL2" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bl1tw")

[node name="UpgradeL3" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_bl1tw")
